<resources>
    <string name="app_name">StoreAppSettings</string>
    <string name="title_label">Settings</string>

    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="gender_label">Gender</string>
    <string name="birthday_label">Birthday</string>

    <string name="phone_number_label">Phone Number</string>
    <string name="email_address_label">Email Address</string>

    <string name="reset_button">Reset</string>
</resources>