<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/title_label"
        android:textSize="@dimen/title_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewFirstNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="28dp"
        android:text="@string/first_name_label"
        android:textSize="@dimen/body_labels"
        app:layout_constraintEnd_toStartOf="@+id/textViewTitleLabel"
        app:layout_constraintStart_toStartOf="@+id/editTextPhoneNumberEntry"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLastNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="9dp"
        android:text="@string/last_name_label"
        android:textSize="@dimen/body_labels"
        app:layout_constraintEnd_toStartOf="@+id/editTextLastNameEntry"
        app:layout_constraintTop_toBottomOf="@+id/editTextFirstNameEntry" />

    <TextView
        android:id="@+id/textViewGenderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:text="@string/gender_label"
        android:textSize="@dimen/body_labels"
        app:layout_constraintBottom_toTopOf="@+id/textViewBirthdayLabel"
        app:layout_constraintStart_toStartOf="@+id/textViewBirthdayLabel" />

    <TextView
        android:id="@+id/textViewBirthdayLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="16dp"
        android:text="@string/birthday_label"
        android:textSize="@dimen/body_labels"
        app:layout_constraintBottom_toTopOf="@+id/textViewPhoneNumberLabel"
        app:layout_constraintStart_toStartOf="@+id/textViewPhoneNumberLabel" />

    <TextView
        android:id="@+id/textViewPhoneNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="11dp"
        android:text="@string/phone_number_label"
        android:textSize="@dimen/body_labels"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhoneNumberEntry"
        app:layout_constraintStart_toStartOf="@+id/editTextPhoneNumberEntry" />

    <TextView
        android:id="@+id/textViewEmailAddressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="9dp"
        android:text="@string/email_address_label"
        android:textSize="@dimen/body_labels"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailAddressEntry"
        app:layout_constraintTop_toBottomOf="@+id/editTextBirthdayEntry" />

    <EditText
        android:id="@+id/editTextFirstNameEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewFirstNameLabel"
        app:layout_constraintStart_toEndOf="@+id/textViewFirstNameLabel" />

    <EditText
        android:id="@+id/editTextLastNameEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewLastNameLabel"
        app:layout_constraintStart_toStartOf="@+id/editTextFirstNameEntry" />

    <EditText
        android:id="@+id/editTextBirthdayEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="9dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/textViewPhoneNumberLabel"
        app:layout_constraintEnd_toEndOf="@+id/textViewEmailAddressLabel" />

    <EditText
        android:id="@+id/editTextPhoneNumberEntry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="318dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextEmailAddressEntry"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextEmailAddressEntry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextPhoneNumberEntry"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmailAddressLabel" />

    <Spinner
        android:id="@+id/spinnerGender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextLastNameEntry"
        app:layout_constraintStart_toStartOf="@+id/editTextLastNameEntry"
        app:layout_constraintTop_toBottomOf="@+id/editTextLastNameEntry" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginBottom="52dp"
        android:text="@string/reset_button"
        android:textSize="@dimen/body_labels"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>